# ssolarbx-smb

./: Cargo.toml  README.md  build.sh  config.toml.example
src/: config.rs  main.rs
