[package]
name = "ssolarbx-smb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
config = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.216"
tokio = { version = "1.42.0", features = ["full"] }
rand = "0.9.0"
